--- a/render.yaml
+++ b/render.yaml
@@ -10,6 +10,10 @@ services:
     user: render
     database: property_db
     port: 5432
+    persistentDisk:
+      sizeGb: 1
+      name: db-disk
+      mountPath: /var/lib/postgresql/data
 
   # Application Web Flask
   - type: web
@@ -20,6 +24,7 @@ services:
     buildCommand: |
       pip install -r requirements.txt
       flask db upgrade
+      python create_admin_auto.py
     startCommand: gunicorn app:app
     envVars:
       - key: FLASK_APP
@@ -29,13 +34,21 @@ services:
       - key: SECRET_KEY
         generateValue: true
       - key: CLOUDINARY_CLOUD_NAME
-        sync: false  # À définir manuellement dans le dashboard
+        value: dbn8ees4r  # 🔁 Remplace par ton vrai Cloud Name
       - key: CLOUDINARY_API_KEY
-        sync: false  # À définir manuellement dans le dashboard
+        value: 118479922956157  # 🔁 Remplace par ta vrai API Key
       - key: CLOUDINARY_API_SECRET
-        sync: false  # À définir manuellement dans le dashboard
+        secret: true  # 🔐 Sera saisi manuellement dans Render
       - key: DATABASE_URL
         fromDatabase:
           name: property-db
           property: connectionString
+      - key: ADMIN_USERNAME
+        value: admin
+      - key: ADMIN_PHONE
+        value: "+221771234567"
+      - key: ADMIN_PASSWORD
+        secret: true  # 🔐 Tu le saisis toi-même dans Render
     healthCheckPath: /
+    databaseConnection:
+      databaseName: property-db
