--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,4 @@
-# render.yaml
-# Configuration de déploiement pour Render.com
-
+# render.yaml - Version sécurisée
 services:
   # Base de données PostgreSQL
   - type: postgres
@@ -10,10 +8,6 @@ services:
     user: render
     database: property_db
     port: 5432
-    persistentDisk:
-      sizeGb: 1
-      name: db-disk
-      mountPath: /var/lib/postgresql/data
 
   # Application Web Flask
   - type: web
@@ -34,11 +28,11 @@ services:
       - key: SECRET_KEY
         generateValue: true
       - key: CLOUDINARY_CLOUD_NAME
-        value: dbn8ees4r  # 🔁 Remplace par ton vrai Cloud Name
+        sync: false  # À saisir manuellement dans Render
       - key: CLOUDINARY_API_KEY
-        value: 118479922956157  # 🔁 Remplace par ta vrai API Key
+        sync: false  # À saisir manuellement dans Render
       - key: CLOUDINARY_API_SECRET
-        secret: true  # 🔐 Sera saisi manuellement dans Render
+        sync: false  # À saisir manuellement dans Render
       - key: DATABASE_URL
         fromDatabase:
           name: property-db
@@ -48,7 +42,5 @@ services:
       - key: ADMIN_PHONE
         value: "+2250506531522"
       - key: ADMIN_PASSWORD
-        secret: true  # 🔐 Tu le saisis toi-même dans Render
+        sync: false  # À saisir manuellement dans Render
     healthCheckPath: /
-    databaseConnection:
-      databaseName: property-db
