--- a/render.yaml
+++ b/render.yaml
@@ -1,46 +1,33 @@
-# render.yaml - Version sécurisée
+# render.yaml
 services:
-  # Base de données PostgreSQL
-  - type: postgres
-    name: property-db
-    plan: free
-    region: oregon
-    user: render
-    database: property_db
-    port: 5432
-
   # Application Web Flask
   - type: web
-    name: immobilier-app
+    name: annonces-immo-ci  # Nom clair, proche de ton projet
     plan: free
-    region: oregon
-    runtime: python
+    env: python
+    region: frankfurt  # Plus proche de la CI que "oregon"
     buildCommand: |
       pip install -r requirements.txt
-      flask db upgrade
-      python create_admin_auto.py
+      alembic upgrade head  # Applique les migrations → crée les tables
+      python create_admin_auto.py  # Crée l'admin après les tables
     startCommand: gunicorn app:app
     envVars:
-      - key: FLASK_APP
-        value: app.py
       - key: FLASK_ENV
         value: production
       - key: SECRET_KEY
         generateValue: true
-      - key: CLOUDINARY_CLOUD_NAME
-        sync: false  # À saisir manuellement dans Render
-      - key: CLOUDINARY_API_KEY
-        sync: false  # À saisir manuellement dans Render
-      - key: CLOUDINARY_API_SECRET
-        sync: false  # À saisir manuellement dans Render
       - key: DATABASE_URL
-        fromDatabase:
-          name: property-db
-          property: connectionString
+        sync: false  # ⚠️ À remplir manuellement avec l'URL Supabase ou Render DB
+      - key: CLOUDINARY_CLOUD_NAME
+        value: dbn8ees4r
+      - key: CLOUDINARY_API_KEY
+        value: "118479922956157"
+      - key: CLOUDINARY_API_SECRET
+        sync: false  # 🔐 Saisir manuellement dans Render
       - key: ADMIN_USERNAME
         value: admin
       - key: ADMIN_PHONE
         value: "+2250506531522"
       - key: ADMIN_PASSWORD
-        sync: false  # À saisir manuellement dans Render
+        sync: false  # 🔐 Saisir manuellement (mot de passe admin)
     healthCheckPath: /
