--- a/render.yaml
+++ b/render.yaml
@@ -1,33 +1,34 @@
-# render.yaml
+# render.yaml corrigé pour déploiement
 services:
-  # Application Web Flask
   - type: web
-    name: annonces-immo-ci  # Nom clair, proche de ton projet
+    name: annonces-immo-ci
     plan: free
     env: python
-    region: frankfurt  # Plus proche de la CI que "oregon"
+    region: frankfurt
     buildCommand: |
       pip install -r requirements.txt
-      alembic upgrade head  # Applique les migrations → crée les tables
-      python create_admin_auto.py  # Crée l'admin après les tables
-    startCommand: gunicorn app:app
+      flask db upgrade || (flask db init && flask db migrate -m "Initial migration" && flask db upgrade)
+      python create_admin_auto.py
+    startCommand: gunicorn --bind 0.0.0.0:$PORT app:app --timeout 120 --workers 1
     envVars:
       - key: FLASK_ENV
         value: production
       - key: SECRET_KEY
         generateValue: true
       - key: DATABASE_URL
-        sync: false  # ⚠️ À remplir manuellement avec l'URL Supabase ou Render DB
+        sync: false  # ⚠️ À remplir avec votre URL Supabase
       - key: CLOUDINARY_CLOUD_NAME
         value: dbn8ees4r
       - key: CLOUDINARY_API_KEY
         value: "118479922956157"
       - key: CLOUDINARY_API_SECRET
-        sync: false  # 🔐 Saisir manuellement dans Render
+        sync: false  # 🔐 Saisir manuellement
       - key: ADMIN_USERNAME
         value: admin
       - key: ADMIN_PHONE
         value: "+2250506531522"
       - key: ADMIN_PASSWORD
-        sync: false  # 🔐 Saisir manuellement (mot de passe admin)
+        sync: false  # 🔐 Saisir manuellement
+      - key: FLASK_APP
+        value: app.py
     healthCheckPath: /
