--- a/render.yaml
+++ b/render.yaml
@@ -1,4 +1,4 @@
-# render.yaml corrigé pour déploiement
+# render.yaml
 services:
   - type: web
     name: annonces-immo-ci
@@ -7,7 +7,7 @@ services:
     region: frankfurt
     buildCommand: |
       pip install -r requirements.txt
-      flask db upgrade || (flask db init && flask db migrate -m "Initial migration" && flask db upgrade)
+      alembic upgrade head
       python create_admin_auto.py
     startCommand: gunicorn --bind 0.0.0.0:$PORT app:app --timeout 120 --workers 1
     envVars:
@@ -16,19 +16,19 @@ services:
       - key: SECRET_KEY
         generateValue: true
       - key: DATABASE_URL
-        sync: false  # ⚠️ À remplir avec votre URL Supabase
+        sync: false  # ⚠️ À remplir avec ton URL Supabase
       - key: CLOUDINARY_CLOUD_NAME
         value: dbn8ees4r
       - key: CLOUDINARY_API_KEY
         value: "118479922956157"
       - key: CLOUDINARY_API_SECRET
-        sync: false  # 🔐 Saisir manuellement
+        sync: false  # 🔐 Saisir manuellement dans Render
       - key: ADMIN_USERNAME
         value: admin
       - key: ADMIN_PHONE
         value: "+2250506531522"
       - key: ADMIN_PASSWORD
-        sync: false  # 🔐 Saisir manuellement
+        sync: false  # 🔐 Saisir manuellement dans Render
       - key: FLASK_APP
         value: app.py
     healthCheckPath: /
